TASK: Kickstart site

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,11 @@
 /Build/Resources
 /Configuration/
 /Data/
-/Packages/
+/Packages/Application/
+/Packages/Plugins/
+/Packages/Framework/
+/Packages/Libraries/
+/Packages/Sites/Neos.Demo/
 /Web/
 /bin/
 /Readme.txt
