--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,10 @@
         "phpunit/phpunit": "~6.0.0",
         "symfony/css-selector": "~2.0",
         "neos/behat": "dev-master",
-        
+
         "neos/neos-ui": "^1.0@beta",
-        "neos/neos-ui-compiled": "^1.0@beta"
+        "neos/neos-ui-compiled": "^1.0@beta",
+        "editorconfig-checker/editorconfig-checker": "^6.0"
     },
     "replace": {
         "typo3/neos-base-distribution": "3.1.2"
@@ -47,6 +48,7 @@
         "post-update-cmd": "Neos\\Flow\\Composer\\InstallerScripts::postUpdateAndInstall",
         "post-install-cmd": "Neos\\Flow\\Composer\\InstallerScripts::postUpdateAndInstall",
         "post-package-update": "Neos\\Flow\\Composer\\InstallerScripts::postPackageUpdateAndInstall",
-        "post-package-install": "Neos\\Flow\\Composer\\InstallerScripts::postPackageUpdateAndInstall"
+        "post-package-install": "Neos\\Flow\\Composer\\InstallerScripts::postPackageUpdateAndInstall",
+        "lint:editorconfig": "./bin/editorconfig-checker -d -e 'Public|vendor|Sites\\.xml' ./Packages/Sites/DG.BodyInTheLight/*"
     }
 }
