TASK: Update to Neos 3.2

--- a/composer.json
+++ b/composer.json
@@ -16,27 +16,30 @@
         "bin-dir": "bin"
     },
     "require": {
-        "neos/neos": "~3.1.0",
-        "neos/nodetypes": "~3.1.0",
-        "neos/demo": "~3.1.0",
-        "neos/site-kickstarter": "~3.1.0",
+        "neos/neos": "~3.2.0",
+        "neos/nodetypes": "~3.2.0",
+        "neos/demo": "~3.2.0",
+        "neos/site-kickstarter": "~3.2.0",
 
         "neos/seo": "~2.0",
         "neos/setup": "~4.0",
         "flowpack/neos-frontendlogin": "~3.0",
         "neos/redirecthandler-neosadapter": "~2.0",
-        "neos/redirecthandler-databasestorage": "~2.0"
+        "neos/redirecthandler-databasestorage": "~2.0",
+        "neos/neos-ui": "1.0.*@beta",
+        "neos/neos-ui-compiled": "1.0.*@beta",
+        "sitegeist/excalibur": "dev-master",
+        "packagefactory/atomicfusion": "^2.1",
+        "sitegeist/monocle": "^2.0"
     },
     "require-dev": {
-        "neos/buildessentials": "~4.1.0",
+        "neos/buildessentials": "4.2.x-dev",
         "mikey179/vfsstream": "~1.6",
         "phpunit/phpunit": "~6.0.0",
         "symfony/css-selector": "~2.0",
         "neos/behat": "dev-master",
-
-        "neos/neos-ui": "^1.0@beta",
-        "neos/neos-ui-compiled": "^1.0@beta",
-        "editorconfig-checker/editorconfig-checker": "^6.0"
+        "editorconfig-checker/editorconfig-checker": "^6.0",
+        "sitegeist/neosguidelines": "^1.1"
     },
     "replace": {
         "typo3/neos-base-distribution": "3.1.2"
@@ -50,5 +53,11 @@
         "post-package-update": "Neos\\Flow\\Composer\\InstallerScripts::postPackageUpdateAndInstall",
         "post-package-install": "Neos\\Flow\\Composer\\InstallerScripts::postPackageUpdateAndInstall",
         "lint:editorconfig": "./bin/editorconfig-checker -d -e 'Public|vendor|Sites\\.xml' ./Packages/Sites/DG.BodyInTheLight/*"
+    },
+    "repositories": {
+        "excalibur": {
+            "type": "vcs",
+            "url": "https://github.com/sitegeist/Sitegeist.Excalibur.git"
+        }
     }
 }
