--- a/Packages/Sites/DG.BodyInTheLight/Configuration/NodeTypes.Document.Page.yaml
+++ b/Packages/Sites/DG.BodyInTheLight/Configuration/NodeTypes.Document.Page.yaml
@@ -15,3 +15,31 @@
       'Neos.Neos:Shortcut': true
       'DG.BodyInTheLight:Document': true
 
+  properties:
+    copyright:
+      type: string
+      ui:
+        inlineEditable: true
+        aloha:
+          placeholder: 'Copyrightangabe...'
+          autoparagraph: false
+          'format':
+            'strong': false
+            'em': false
+            'u': false
+            'sub': false
+            'sup': false
+            'del': false
+            'p': false
+            'h1': false
+            'h2': false
+            'h3': false
+            'pre': false
+            'removeFormat': false
+          'table':
+            'table': false
+          'list':
+            'ol': false
+            'ul': false
+          'link':
+            'a': false
